@@ -128,6 +128,8 @@ helper_test_SOURCES=\
     include/rofi.h\
     source/helper.c\
     include/helper.h\
+	source/xrmoptions.h\
+	source/xrmoptions.c\
     test/helper-test.c
 
 .PHONY: test
